[package]
name = "mono-vo_rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = "0.63.0"
#kiss3d = "0.32"
nalgebra = {version = "*", features = ["serde-serialize"]}
cv-convert = {version = '0.19.0', features = ['opencv_0-63','nalgebra_0-30']}